src/canopy/MetaGrammar.java
package canopy;

import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.EnumMap;
import java.util.HashMap;
import java.util.Iterator;
import java.util.regex.Pattern;
import java.text.ParseException;

public final class MetaGrammar {

public static class TreeNode implements Iterable<TreeNode> {
  public String text;
  public int offset;
  public List<TreeNode> nodes;

  Map<Label, TreeNode> labelled;

  public TreeNode() {
    this("", -1, new ArrayList<TreeNode>(0));
  }

  public TreeNode(String text, int offset) {
    this(text, offset, new ArrayList<TreeNode>(0));
  }

  public TreeNode(String text, int offset, List<TreeNode> elements) {
    this.text = text;
    this.offset = offset;
    this.nodes = elements;
    this.labelled = new EnumMap<Label, TreeNode>(Label.class);
  }

  public TreeNode get(Label key) {
    return labelled.get(key);
  }

  public Iterator<TreeNode> iterator() {
    return nodes.iterator();
  }
}

static class TreeNode1 extends TreeNode {
  TreeNode1(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.grammar_name, elements.get(1));
  }
}

static class TreeNode2 extends TreeNode {
  TreeNode2(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.rule, elements.get(1));
  }
}

static class TreeNode3 extends TreeNode {
  TreeNode3(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.id, elements.get(3));
    labelled.put(Label.object_identifier, elements.get(3));
  }
}

static class TreeNode4 extends TreeNode {
  TreeNode4(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.identifier, elements.get(0));
    labelled.put(Label.assignment, elements.get(1));
    labelled.put(Label.parsing_expression, elements.get(2));
  }
}

static class TreeNode5 extends TreeNode {
  TreeNode5(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.identifier, elements.get(0));
  }
}

static class TreeNode6 extends TreeNode {
  TreeNode6(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.identifier, elements.get(1));
  }
}

static class TreeNode7 extends TreeNode {
  TreeNode7(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.choice_part, elements.get(0));
  }
}

static class TreeNode8 extends TreeNode {
  TreeNode8(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.expr, elements.get(3));
    labelled.put(Label.choice_part, elements.get(3));
  }
}

static class TreeNode9 extends TreeNode {
  TreeNode9(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.actionable, elements.get(0));
    labelled.put(Label.action_tag, elements.get(2));
  }
}

static class TreeNode10 extends TreeNode {
  TreeNode10(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.actionable, elements.get(2));
  }
}

static class TreeNode11 extends TreeNode {
  TreeNode11(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.id, elements.get(1));
    labelled.put(Label.identifier, elements.get(1));
  }
}

static class TreeNode12 extends TreeNode {
  TreeNode12(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.typable, elements.get(0));
    labelled.put(Label.type_tag, elements.get(2));
  }
}

static class TreeNode13 extends TreeNode {
  TreeNode13(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.id, elements.get(1));
    labelled.put(Label.object_identifier, elements.get(1));
  }
}

static class TreeNode14 extends TreeNode {
  TreeNode14(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.sequence_part, elements.get(0));
  }
}

static class TreeNode15 extends TreeNode {
  TreeNode15(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.expr, elements.get(1));
    labelled.put(Label.sequence_part, elements.get(1));
  }
}

static class TreeNode16 extends TreeNode {
  TreeNode16(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.sequence_element, elements.get(2));
  }
}

static class TreeNode17 extends TreeNode {
  TreeNode17(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.id, elements.get(0));
    labelled.put(Label.identifier, elements.get(0));
  }
}

static class TreeNode18 extends TreeNode {
  TreeNode18(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.parsing_expression, elements.get(2));
  }
}

static class TreeNode19 extends TreeNode {
  TreeNode19(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.atom, elements.get(2));
  }
}

static class TreeNode20 extends TreeNode {
  TreeNode20(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.atom, elements.get(0));
  }
}

static class TreeNode21 extends TreeNode {
  TreeNode21(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.atom, elements.get(0));
  }
}

static class TreeNode22 extends TreeNode {
  TreeNode22(String text, int offset, List<TreeNode> elements) {
    super(text, offset, elements);
    labelled.put(Label.identifier, elements.get(0));
  }
}

static class CacheRecord {
  TreeNode node;
  int tail;

  CacheRecord(TreeNode node, int tail) {
    this.node = node;
    this.tail = tail;
  }
}

public interface Actions {
   TreeNode paren_expr(String input, int start, int end, List<TreeNode> elements);
   TreeNode char_class(String input, int start, int end, List<TreeNode> elements);
   TreeNode extension(String input, int start, int end, List<TreeNode> elements);
   TreeNode string(String input, int start, int end, List<TreeNode> elements);
   TreeNode maybe(String input, int start, int end, List<TreeNode> elements);
   TreeNode rule(String input, int start, int end, List<TreeNode> elements);
   TreeNode any_char(String input, int start, int end, List<TreeNode> elements);
   TreeNode reference(String input, int start, int end, List<TreeNode> elements);
   TreeNode sequence(String input, int start, int end, List<TreeNode> elements);
   TreeNode predicate(String input, int start, int end, List<TreeNode> elements);
   TreeNode grammar(String input, int start, int end, List<TreeNode> elements);
   TreeNode repeat(String input, int start, int end, List<TreeNode> elements);
   TreeNode action(String input, int start, int end, List<TreeNode> elements);
   TreeNode sequence_part(String input, int start, int end, List<TreeNode> elements);
   TreeNode choice(String input, int start, int end, List<TreeNode> elements);
   TreeNode ci_string(String input, int start, int end, List<TreeNode> elements);
}

static class Parser {
  static TreeNode FAILURE = new TreeNode();

  int inputSize, offset, failure;
  String input;
  List<String> expected;
  Map<Label, Map<Integer, CacheRecord>> cache;
  Actions actions;

  static Pattern REGEX_1 = Pattern.compile("\\A[ \\t\\n\\r]");
  static Pattern REGEX_2 = Pattern.compile("\\A[^\\n]");
  static Pattern REGEX_3 = Pattern.compile("\\A[a-zA-Z_]");
  static Pattern REGEX_4 = Pattern.compile("\\A[a-zA-Z0-9_]");
  static Pattern REGEX_5 = Pattern.compile("\\A[^\"]");
  static Pattern REGEX_6 = Pattern.compile("\\A[^']");
  static Pattern REGEX_7 = Pattern.compile("\\A[^`]");
  static Pattern REGEX_8 = Pattern.compile("\\A[^\\]]");

  TreeNode _read_grammar() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.grammar);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.grammar, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      List<TreeNode> elements0 = new ArrayList<TreeNode>(4);
      TreeNode address1 = FAILURE;
      int remaining0 = 0;
      int index2 = offset;
      List<TreeNode> elements1 = new ArrayList<TreeNode>();
      TreeNode address2 = new TreeNode("", -1);
      while (address2 != FAILURE) {
        address2 = _read__();
        if (address2 != FAILURE) {
          elements1.add(address2);
          --remaining0;
        }
      }
      if (remaining0 <= 0) {
        address1 = new TreeNode(input.substring(index2, offset), index2, elements1);
        offset = offset;
      } else {
        address1 = FAILURE;
      }
      if (address1 != FAILURE) {
        elements0.add(0, address1);
        TreeNode address3 = FAILURE;
        address3 = _read_grammar_name();
        if (address3 != FAILURE) {
          elements0.add(1, address3);
          TreeNode address4 = FAILURE;
          int remaining1 = 1;
          int index3 = offset;
          List<TreeNode> elements2 = new ArrayList<TreeNode>();
          TreeNode address5 = new TreeNode("", -1);
          while (address5 != FAILURE) {
            int index4 = offset;
            List<TreeNode> elements3 = new ArrayList<TreeNode>(2);
            TreeNode address6 = FAILURE;
            int remaining2 = 0;
            int index5 = offset;
            List<TreeNode> elements4 = new ArrayList<TreeNode>();
            TreeNode address7 = new TreeNode("", -1);
            while (address7 != FAILURE) {
              address7 = _read__();
              if (address7 != FAILURE) {
                elements4.add(address7);
                --remaining2;
              }
            }
            if (remaining2 <= 0) {
              address6 = new TreeNode(input.substring(index5, offset), index5, elements4);
              offset = offset;
            } else {
              address6 = FAILURE;
            }
            if (address6 != FAILURE) {
              elements3.add(0, address6);
              TreeNode address8 = FAILURE;
              address8 = _read_rule();
              if (address8 != FAILURE) {
                elements3.add(1, address8);
              } else {
                elements3 = null;
                offset = index4;
              }
            } else {
              elements3 = null;
              offset = index4;
            }
            if (elements3 == null) {
              address5 = FAILURE;
            } else {
              address5 = new TreeNode2(input.substring(index4, offset), index4, elements3);
              offset = offset;
            }
            if (address5 != FAILURE) {
              elements2.add(address5);
              --remaining1;
            }
          }
          if (remaining1 <= 0) {
            address4 = new TreeNode(input.substring(index3, offset), index3, elements2);
            offset = offset;
          } else {
            address4 = FAILURE;
          }
          if (address4 != FAILURE) {
            elements0.add(2, address4);
            TreeNode address9 = FAILURE;
            int remaining3 = 0;
            int index6 = offset;
            List<TreeNode> elements5 = new ArrayList<TreeNode>();
            TreeNode address10 = new TreeNode("", -1);
            while (address10 != FAILURE) {
              address10 = _read__();
              if (address10 != FAILURE) {
                elements5.add(address10);
                --remaining3;
              }
            }
            if (remaining3 <= 0) {
              address9 = new TreeNode(input.substring(index6, offset), index6, elements5);
              offset = offset;
            } else {
              address9 = FAILURE;
            }
            if (address9 != FAILURE) {
              elements0.add(3, address9);
            } else {
              elements0 = null;
              offset = index1;
            }
          } else {
            elements0 = null;
            offset = index1;
          }
        } else {
          elements0 = null;
          offset = index1;
        }
      } else {
        elements0 = null;
        offset = index1;
      }
      if (elements0 == null) {
        address0 = FAILURE;
      } else {
        address0 = actions.grammar(input, index1, offset, elements0);
        offset = offset;
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read_grammar_name() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.grammar_name);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.grammar_name, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      List<TreeNode> elements0 = new ArrayList<TreeNode>(4);
      TreeNode address1 = FAILURE;
      String chunk0 = null;
      if (offset < inputSize) {
        chunk0 = input.substring(offset, Math.min(offset + 7, input.length()));
      }
      if (chunk0 != null && chunk0.toLowerCase().equals("grammar".toLowerCase())) {
        address1 = new TreeNode(input.substring(offset, offset + 7), offset);
        offset = offset + 7;
      } else {
        address1 = FAILURE;
        if (offset > failure) {
          failure = offset;
          expected = new ArrayList<String>();
        }
        if (offset == failure) {
          expected.add("`grammar`");
        }
      }
      if (address1 != FAILURE) {
        elements0.add(0, address1);
        TreeNode address2 = FAILURE;
        int index2 = offset;
        String chunk1 = null;
        if (offset < inputSize) {
          chunk1 = input.substring(offset, Math.min(offset + 1, input.length()));
        }
        if (chunk1 != null && chunk1.equals(":")) {
          address2 = new TreeNode(input.substring(offset, offset + 1), offset);
          offset = offset + 1;
        } else {
          address2 = FAILURE;
          if (offset > failure) {
            failure = offset;
            expected = new ArrayList<String>();
          }
          if (offset == failure) {
            expected.add("\":\"");
          }
        }
        if (address2 == FAILURE) {
          address2 = new TreeNode(input.substring(index2, index2), index2);
          offset = index2;
        }
        if (address2 != FAILURE) {
          elements0.add(1, address2);
          TreeNode address3 = FAILURE;
          int remaining0 = 1;
          int index3 = offset;
          List<TreeNode> elements1 = new ArrayList<TreeNode>();
          TreeNode address4 = new TreeNode("", -1);
          while (address4 != FAILURE) {
            address4 = _read__();
            if (address4 != FAILURE) {
              elements1.add(address4);
              --remaining0;
            }
          }
          if (remaining0 <= 0) {
            address3 = new TreeNode(input.substring(index3, offset), index3, elements1);
            offset = offset;
          } else {
            address3 = FAILURE;
          }
          if (address3 != FAILURE) {
            elements0.add(2, address3);
            TreeNode address5 = FAILURE;
            address5 = _read_object_identifier();
            if (address5 != FAILURE) {
              elements0.add(3, address5);
            } else {
              elements0 = null;
              offset = index1;
            }
          } else {
            elements0 = null;
            offset = index1;
          }
        } else {
          elements0 = null;
          offset = index1;
        }
      } else {
        elements0 = null;
        offset = index1;
      }
      if (elements0 == null) {
        address0 = FAILURE;
      } else {
        address0 = new TreeNode3(input.substring(index1, offset), index1, elements0);
        offset = offset;
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read_rule() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.rule);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.rule, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      List<TreeNode> elements0 = new ArrayList<TreeNode>(3);
      TreeNode address1 = FAILURE;
      address1 = _read_identifier();
      if (address1 != FAILURE) {
        elements0.add(0, address1);
        TreeNode address2 = FAILURE;
        address2 = _read_assignment();
        if (address2 != FAILURE) {
          elements0.add(1, address2);
          TreeNode address3 = FAILURE;
          address3 = _read_parsing_expression();
          if (address3 != FAILURE) {
            elements0.add(2, address3);
          } else {
            elements0 = null;
            offset = index1;
          }
        } else {
          elements0 = null;
          offset = index1;
        }
      } else {
        elements0 = null;
        offset = index1;
      }
      if (elements0 == null) {
        address0 = FAILURE;
      } else {
        address0 = actions.rule(input, index1, offset, elements0);
        offset = offset;
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read_assignment() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.assignment);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.assignment, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      List<TreeNode> elements0 = new ArrayList<TreeNode>(3);
      TreeNode address1 = FAILURE;
      int remaining0 = 1;
      int index2 = offset;
      List<TreeNode> elements1 = new ArrayList<TreeNode>();
      TreeNode address2 = new TreeNode("", -1);
      while (address2 != FAILURE) {
        address2 = _read__();
        if (address2 != FAILURE) {
          elements1.add(address2);
          --remaining0;
        }
      }
      if (remaining0 <= 0) {
        address1 = new TreeNode(input.substring(index2, offset), index2, elements1);
        offset = offset;
      } else {
        address1 = FAILURE;
      }
      if (address1 != FAILURE) {
        elements0.add(0, address1);
        TreeNode address3 = FAILURE;
        String chunk0 = null;
        if (offset < inputSize) {
          chunk0 = input.substring(offset, Math.min(offset + 2, input.length()));
        }
        if (chunk0 != null && chunk0.equals("<-")) {
          address3 = new TreeNode(input.substring(offset, offset + 2), offset);
          offset = offset + 2;
        } else {
          address3 = FAILURE;
          if (offset > failure) {
            failure = offset;
            expected = new ArrayList<String>();
          }
          if (offset == failure) {
            expected.add("\"<-\"");
          }
        }
        if (address3 != FAILURE) {
          elements0.add(1, address3);
          TreeNode address4 = FAILURE;
          int remaining1 = 1;
          int index3 = offset;
          List<TreeNode> elements2 = new ArrayList<TreeNode>();
          TreeNode address5 = new TreeNode("", -1);
          while (address5 != FAILURE) {
            address5 = _read__();
            if (address5 != FAILURE) {
              elements2.add(address5);
              --remaining1;
            }
          }
          if (remaining1 <= 0) {
            address4 = new TreeNode(input.substring(index3, offset), index3, elements2);
            offset = offset;
          } else {
            address4 = FAILURE;
          }
          if (address4 != FAILURE) {
            elements0.add(2, address4);
          } else {
            elements0 = null;
            offset = index1;
          }
        } else {
          elements0 = null;
          offset = index1;
        }
      } else {
        elements0 = null;
        offset = index1;
      }
      if (elements0 == null) {
        address0 = FAILURE;
      } else {
        address0 = new TreeNode(input.substring(index1, offset), index1, elements0);
        offset = offset;
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read__() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.__);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.__, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      String chunk0 = null;
      if (offset < inputSize) {
        chunk0 = input.substring(offset, Math.min(offset + 1, input.length()));
      }
      if (chunk0 != null && REGEX_1.matcher(chunk0).matches()) {
        address0 = new TreeNode(input.substring(offset, offset + 1), offset);
        offset = offset + 1;
      } else {
        address0 = FAILURE;
        if (offset > failure) {
          failure = offset;
          expected = new ArrayList<String>();
        }
        if (offset == failure) {
          expected.add("[ \\t\\n\\r]");
        }
      }
      if (address0 == FAILURE) {
        offset = index1;
        address0 = _read_comment();
        if (address0 == FAILURE) {
          offset = index1;
        }
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read_comment() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.comment);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.comment, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      List<TreeNode> elements0 = new ArrayList<TreeNode>(2);
      TreeNode address1 = FAILURE;
      String chunk0 = null;
      if (offset < inputSize) {
        chunk0 = input.substring(offset, Math.min(offset + 1, input.length()));
      }
      if (chunk0 != null && chunk0.equals("#")) {
        address1 = new TreeNode(input.substring(offset, offset + 1), offset);
        offset = offset + 1;
      } else {
        address1 = FAILURE;
        if (offset > failure) {
          failure = offset;
          expected = new ArrayList<String>();
        }
        if (offset == failure) {
          expected.add("\"#\"");
        }
      }
      if (address1 != FAILURE) {
        elements0.add(0, address1);
        TreeNode address2 = FAILURE;
        int remaining0 = 0;
        int index2 = offset;
        List<TreeNode> elements1 = new ArrayList<TreeNode>();
        TreeNode address3 = new TreeNode("", -1);
        while (address3 != FAILURE) {
          String chunk1 = null;
          if (offset < inputSize) {
            chunk1 = input.substring(offset, Math.min(offset + 1, input.length()));
          }
          if (chunk1 != null && REGEX_2.matcher(chunk1).matches()) {
            address3 = new TreeNode(input.substring(offset, offset + 1), offset);
            offset = offset + 1;
          } else {
            address3 = FAILURE;
            if (offset > failure) {
              failure = offset;
              expected = new ArrayList<String>();
            }
            if (offset == failure) {
              expected.add("[^\\n]");
            }
          }
          if (address3 != FAILURE) {
            elements1.add(address3);
            --remaining0;
          }
        }
        if (remaining0 <= 0) {
          address2 = new TreeNode(input.substring(index2, offset), index2, elements1);
          offset = offset;
        } else {
          address2 = FAILURE;
        }
        if (address2 != FAILURE) {
          elements0.add(1, address2);
        } else {
          elements0 = null;
          offset = index1;
        }
      } else {
        elements0 = null;
        offset = index1;
      }
      if (elements0 == null) {
        address0 = FAILURE;
      } else {
        address0 = new TreeNode(input.substring(index1, offset), index1, elements0);
        offset = offset;
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read_object_identifier() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.object_identifier);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.object_identifier, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      List<TreeNode> elements0 = new ArrayList<TreeNode>(2);
      TreeNode address1 = FAILURE;
      address1 = _read_identifier();
      if (address1 != FAILURE) {
        elements0.add(0, address1);
        TreeNode address2 = FAILURE;
        int remaining0 = 0;
        int index2 = offset;
        List<TreeNode> elements1 = new ArrayList<TreeNode>();
        TreeNode address3 = new TreeNode("", -1);
        while (address3 != FAILURE) {
          int index3 = offset;
          List<TreeNode> elements2 = new ArrayList<TreeNode>(2);
          TreeNode address4 = FAILURE;
          String chunk0 = null;
          if (offset < inputSize) {
            chunk0 = input.substring(offset, Math.min(offset + 1, input.length()));
          }
          if (chunk0 != null && chunk0.equals(".")) {
            address4 = new TreeNode(input.substring(offset, offset + 1), offset);
            offset = offset + 1;
          } else {
            address4 = FAILURE;
            if (offset > failure) {
              failure = offset;
              expected = new ArrayList<String>();
            }
            if (offset == failure) {
              expected.add("\".\"");
            }
          }
          if (address4 != FAILURE) {
            elements2.add(0, address4);
            TreeNode address5 = FAILURE;
            address5 = _read_identifier();
            if (address5 != FAILURE) {
              elements2.add(1, address5);
            } else {
              elements2 = null;
              offset = index3;
            }
          } else {
            elements2 = null;
            offset = index3;
          }
          if (elements2 == null) {
            address3 = FAILURE;
          } else {
            address3 = new TreeNode6(input.substring(index3, offset), index3, elements2);
            offset = offset;
          }
          if (address3 != FAILURE) {
            elements1.add(address3);
            --remaining0;
          }
        }
        if (remaining0 <= 0) {
          address2 = new TreeNode(input.substring(index2, offset), index2, elements1);
          offset = offset;
        } else {
          address2 = FAILURE;
        }
        if (address2 != FAILURE) {
          elements0.add(1, address2);
        } else {
          elements0 = null;
          offset = index1;
        }
      } else {
        elements0 = null;
        offset = index1;
      }
      if (elements0 == null) {
        address0 = FAILURE;
      } else {
        address0 = new TreeNode5(input.substring(index1, offset), index1, elements0);
        offset = offset;
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read_identifier() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.identifier);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.identifier, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      List<TreeNode> elements0 = new ArrayList<TreeNode>(2);
      TreeNode address1 = FAILURE;
      String chunk0 = null;
      if (offset < inputSize) {
        chunk0 = input.substring(offset, Math.min(offset + 1, input.length()));
      }
      if (chunk0 != null && REGEX_3.matcher(chunk0).matches()) {
        address1 = new TreeNode(input.substring(offset, offset + 1), offset);
        offset = offset + 1;
      } else {
        address1 = FAILURE;
        if (offset > failure) {
          failure = offset;
          expected = new ArrayList<String>();
        }
        if (offset == failure) {
          expected.add("[a-zA-Z_]");
        }
      }
      if (address1 != FAILURE) {
        elements0.add(0, address1);
        TreeNode address2 = FAILURE;
        int remaining0 = 0;
        int index2 = offset;
        List<TreeNode> elements1 = new ArrayList<TreeNode>();
        TreeNode address3 = new TreeNode("", -1);
        while (address3 != FAILURE) {
          String chunk1 = null;
          if (offset < inputSize) {
            chunk1 = input.substring(offset, Math.min(offset + 1, input.length()));
          }
          if (chunk1 != null && REGEX_4.matcher(chunk1).matches()) {
            address3 = new TreeNode(input.substring(offset, offset + 1), offset);
            offset = offset + 1;
          } else {
            address3 = FAILURE;
            if (offset > failure) {
              failure = offset;
              expected = new ArrayList<String>();
            }
            if (offset == failure) {
              expected.add("[a-zA-Z0-9_]");
            }
          }
          if (address3 != FAILURE) {
            elements1.add(address3);
            --remaining0;
          }
        }
        if (remaining0 <= 0) {
          address2 = new TreeNode(input.substring(index2, offset), index2, elements1);
          offset = offset;
        } else {
          address2 = FAILURE;
        }
        if (address2 != FAILURE) {
          elements0.add(1, address2);
        } else {
          elements0 = null;
          offset = index1;
        }
      } else {
        elements0 = null;
        offset = index1;
      }
      if (elements0 == null) {
        address0 = FAILURE;
      } else {
        address0 = new TreeNode(input.substring(index1, offset), index1, elements0);
        offset = offset;
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read_parsing_expression() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.parsing_expression);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.parsing_expression, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      address0 = _read_choice();
      if (address0 == FAILURE) {
        offset = index1;
        address0 = _read_choice_part();
        if (address0 == FAILURE) {
          offset = index1;
        }
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read_choice_part() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.choice_part);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.choice_part, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      address0 = _read_action_expression();
      if (address0 == FAILURE) {
        offset = index1;
        address0 = _read_typed_expression();
        if (address0 == FAILURE) {
          offset = index1;
          address0 = _read_sequence();
          if (address0 == FAILURE) {
            offset = index1;
            address0 = _read_sequence_element();
            if (address0 == FAILURE) {
              offset = index1;
            }
          }
        }
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read_sequence_element() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.sequence_element);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.sequence_element, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      address0 = _read_predicated_atom();
      if (address0 == FAILURE) {
        offset = index1;
        address0 = _read_repeated_atom();
        if (address0 == FAILURE) {
          offset = index1;
          address0 = _read_maybe_atom();
          if (address0 == FAILURE) {
            offset = index1;
            address0 = _read_atom();
            if (address0 == FAILURE) {
              offset = index1;
            }
          }
        }
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }

  TreeNode _read_atom() {
    TreeNode address0 = FAILURE;
    int index0 = offset;
    Map<Integer, CacheRecord> rule = cache.get(Label.atom);
    if (rule == null) {
      rule = new HashMap<Integer, CacheRecord>();
      cache.put(Label.atom, rule);
    }
    if (rule.containsKey(offset)) {
      address0 = rule.get(offset).node;
      offset = rule.get(offset).tail;
    } else {
      int index1 = offset;
      address0 = _read_reference();
      if (address0 == FAILURE) {
        offset = index1;
        address0 = _read_terminal();
        if (address0 == FAILURE) {
          offset = index1;
          address0 = _read_paren_expression();
          if (address0 == FAILURE) {
            offset = index1;
          }
        }
      }
      rule.put(index0, new CacheRecord(address0, offset));
    }
    return address0;
  }
